# BeatSight

./: .gitignore  BeatSight.sln  CONGRATS.md  CRITICAL_FINDINGS_AND_FIXES.md  CURRENT_STATUS.md  EDITOR_FIXES_2025_11_03.md  EDITOR_IMPROVEMENTS_2025_11_02.md  FEATURE_LIST.md  IMPLEMENTATION_GUIDE.md  LICENSE  MISSING_INTEGRATIONS.md  NEXT_STEPS.md  OVERVIEW.md  PHASE_1.2_COMPLETE.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SESSION_SUMMARY_2025_11_02_PART2.md  SESSION_SUMMARY_2025_11_02_PART3.md  SETTINGS_REFERENCE.md  SETUP_LINUX.md  START_HERE.md  a_init_monkey.py  additionaldrummertech.txt  ainotes.txt  getting_data.txt  info_data.txt  notes.txt  setup-linux.fish  truncate_playback_screen.py
TempInspector/: Program.cs  TempInspector.csproj
ai-pipeline/: README.md  requirements.txt
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  logging.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  ai_jobs.py  health.py  songs.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  ai_job.py  karma.py  map_asset.py  map_edit.py  map_version.py  role.py  song.py  subscription.py  user.py
backend/app/schemas/: __init__.py  ai_jobs.py  songs.py
backend/app/services/: ai_jobs.py  songs.py
backend/tests/: test_health.py
data/: README.md
docs/: ARCHITECTURE.md  BEATMAP_FORMAT.md  BS_FILE_FORMAT.md  CONTRIBUTING.md  Guidebook.md  LIVE_INPUT_REGRESSION_CHECKLIST.md  SETUP.md  ml_training_runbook.md  web_backend_architecture.md  web_backend_schema.md  (+5 more)
(+309 files in other folders)
