[tool.poetry]
name = "beatsight-backend"
version = "0.1.0"
description = "BeatSight web backend services"
authors = ["BeatSight Team <team@beatsight.io>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.7.0"
pydantic-settings = "^2.5.2"
sqlalchemy = { version = "^2.0.25", extras = ["asyncio"] }
asyncpg = "^0.29.0"
psycopg = { version = "^3.1.18", extras = ["binary"] }
alembic = "^1.13.1"
redis = "^5.0.1"
python-multipart = "^0.0.6"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
argon2-cffi = "^23.1.0"
cryptography = "^42.0.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.3"
httpx = "^0.27.0"
pre-commit = "^3.6.0"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
